
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct timeval {int tv_sec; scalar_t__ tv_usec; } ;
typedef int fd_set ;
typedef int buff ;


 scalar_t__ FD_ISSET (int,int *) ;
 int FD_SET (int,int *) ;
 int FD_ZERO (int *) ;
 int bzero (char*,int) ;
 int read (int,char*,int,int ) ;
 scalar_t__ select (int,int *,int *,int *,struct timeval*) ;

int readcrap(int s) {
 struct timeval tv;
 fd_set fds;
 int ret;
 char buff[1024];

 FD_ZERO(&fds);
 FD_SET(s,&fds);

 bzero(buff,sizeof(buff));

 while (1) {
  tv.tv_sec=1;
  tv.tv_usec=0;
  if ( ret=select(s+1, &fds, ((void*)0), ((void*)0), (struct timeval *)&tv) < 0 )
   break;
  if (FD_ISSET(s,&fds)) {

   if ( read(s,buff,sizeof(buff),0) < 1 )
    break;
  } else {

   return 1;
  }
 }

 return 0;
}
